...
        android:layout_height="0dp"
        android:layout_weight="3"
        app:resize_mode="fill">
    </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

    <TextView
        android:id="@+id/step_text_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="center_horizontal|center_vertical"
        android:gravity="center"
        android:textSize="16sp"/>
...
            app:srcCompat="@drawable/baseline_arrow_back_white_24dp"
            app:fabSize="mini"
            app:backgroundTint="@color/secondaryDarkColor"
            />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/next_video_fab"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/back_video_fab"
            app:srcCompat="@drawable/baseline_arrow_forward_white_24dp"
...
